# minis

./: .clang-tidy  .gitignore  LICENSE  Makefile  README.md  com_minis_Minis.h  lib.sh
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/minis/: MinisInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  minis_jni.c
android/app/src/main/java/com/example/minisandroidtest/: MainActivity.kt
android/app/src/main/java/com/example/minisandroidtest/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/minis/: Benchmark.java  Minis.java
android/app/src/main/java/com/minis/snake/: Direction.java  PlayManager.java  PositionSelector.java  Snake.java  SnakeActivity.java  SnakeView.java
android/app/src/main/res/layout/: activity_snake.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/minisandroidtest/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
benchmarks/: bench_conn_pool.c
src/: CMakeLists.txt  Makefile  avl.c  avl.h  buffer.c  buffer.h  cache.c  cache.h  client  client.c  commands.c  commands.h  common.c  common.h  connections.c  connections.h  deque.c  deque.h  hashtable.c  hashtable.h  heap.c  heap.h  heap_test.c  interactive_client.c  list.c  list.h  main.c  minis_jni.c  out.c  out.h  server  server.c  server_loop.c  server_loop.h  server_main.c  strings.c  strings.h  test_cmds.py  test_cmds_extra.py  thread_pool.c  (+3 more)
src/cache/: avl.c  avl.h  cache.c  cache.h  deque.c  deque.h  entry.c  entry.h  hash.c  hash.h  hashtable.c  hashtable.h  heap.c  heap.h  minis.c  minis.h  minis_private.h  persistence.c  persistence.h  t_hash.c  t_hash.h  t_string.c  t_string.h  t_zset.c  t_zset.h  thread_pool.c  thread_pool.h  zset.c  zset.h
src/com/minis/: Benchmark.java  Minis.java
src/common/: common.c  common.h  glob.c  glob.h  lock.h  macros.h
src/io/: buffer.c  buffer.h  conn_pool.c  conn_pool.h  connection.c  connection.h  connection_handler.c  connection_handler.h  connections.c  connections.h  list.c  list.h  out.c  out.h  proto_defs.h  proto_parser.c  proto_parser.h  protocol_handler.c  protocol_handler.h  response_queue.c  response_queue.h  server.c  server_loop.c  server_loop.h  transport.c  transport.h  zero_copy.c  zero_copy.h  zerocopy.c  zerocopy.h
test/: c10ks_test.py  cache_test.c  concurrency_test_client.py  heap_test.c  idle_conn_test.py  mget-benchmark.py  persistence_test.c  persistent_tlv_client.py  raw.py  soak_test.py  test_cmds_extra.py  ttl_pexpire_test_client.py
test/fuzz/: Makefile  dict.txt  fuzz_out.c  fuzz_parser.c
